# super-hornet

./: .env.example  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.yml
data/: vision_rois.yaml
data/checklists/: combat_engagement.yaml  mining_operation.yaml  quantum_travel.yaml  ship_startup.yaml  trading.yaml
data/prompts/: hornet_combat.md  hornet_system.md  merlin_system.md
docs/: API.md  ARCHITECTURE.md  GETTING_STARTED.md  INSTALL.md
orchestrator/: Dockerfile  pyproject.toml
orchestrator/orchestrator/: __init__.py  audio_processing.py  claude_client.py  config.py  context_store.py  flight_phase.py  game_activity.py  game_client.py  game_state.py  health.py  input_simulator.py  log_parser.py  log_patterns.py  main.py  sc_wiki_client.py  screen_capture.py  sim_client.py  skill_library.py  tools.py  tts_preprocessor.py  uex_client.py  vision.py  voice.py  whisper_client.py
orchestrator/orchestrator/tts/: __init__.py  base.py  elevenlabs.py  kokoro.py
orchestrator/tests/: conftest.py  test_claude_client.py  test_config.py  test_context_store.py  test_flight_phase.py  test_game_state.py  test_screen_capture.py  test_sim_client.py  test_tools.py  test_tts_base.py  test_tts_elevenlabs.py  test_tts_factory.py  test_tts_kokoro.py  test_tts_preprocessor.py  test_voice_output.py  test_whisper_client.py
overlay/: README.md  main.js  package.json  preload.js
scripts/: hornet.bat  merlin.bat  start.sh  stop.sh
simconnect-bridge/: Program.cs  SimConnectManager.cs  WebSocketServer.cs
simconnect-bridge/Models/: SimDataStructs.cs
simconnect-bridge/SimConnectBridge.Tests/: FlightPhaseIntegrationTests.cs  SimConnectBridge.Tests.csproj  SimDataStructTests.cs  SimStateSerializationTests.cs  TestDataStructs.cs  WebSocketServerTests.cs
telemetry-service/: Dockerfile  pyproject.toml
telemetry-service/telemetry/: __init__.py  adapter_manager.py  adapter_protocol.py  config.py  persistence.py  schema.py  service.py
telemetry-service/tests/: conftest.py  test_adapter_manager.py  test_config.py  test_persistence.py  test_schema.py  test_service.py
tests/: pytest.ini
tests/integration/: README.md  conftest.py  test_context_store.py  test_orchestrator_e2e.py  test_simconnect_websocket.py  test_tool_chain.py  test_whisper_pipeline.py
tools/: ingest.py  seed_knowledge.py  test_tts.py
web/: requirements.txt  run.py  server.py
web/static/: app.js  index.html  style.css
