[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "merlin-orchestrator"
version = "0.1.0"
description = "MERLIN - AI co-pilot orchestration layer for Microsoft Flight Simulator 2024"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39.0",
    "websockets>=13.0",
    "chromadb>=0.5.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "sounddevice>=0.5.0",
    "numpy>=1.26",
    "mss>=9.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "respx>=0.21",
]

[project.scripts]
merlin = "orchestrator.main:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: integration tests (require external services or network)",
    "docker: tests that require Docker containers running",
    "network: tests that require internet access",
    "slow: tests that take a long time to run",
]
addopts = "-m 'not integration'"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
