[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hornet-telemetry"
version = "1.0.0"
description = "Universal telemetry hub for Super Hornet sim adapters"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=12.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["telemetry"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
